# aoc2022

./: Cargo.toml
data/tests/: aoc10_results
src/: aoc1.rs  aoc10.rs  aoc11.rs  aoc12.rs  aoc13.rs  aoc2.rs  aoc3.rs  aoc4.rs  aoc5.rs  aoc6.rs  aoc7.rs  aoc8.rs  aoc9.rs  main.rs
