[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_runner = { git = "https://github.com/paunstefan/aoc_runner" }
clap = {version = "3.2", features = ["derive"]}
itertools = "0.10.5"
